# rust-fpe

./: Cargo.toml
.github/workflows/: rust.yml
benches/: ff1.rs  ff3_1.rs
src/: aes.rs  alphabet.rs  ff1.rs  ff3_1.rs  ffx.rs  lib.rs
tests/: ff1.rs  ff3_1.rs
