[package]
name = "fpe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.56"
byteorder = "1.4.3"
aes = "0.8.3"
cbc = "0.1.2"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "ff1"
harness = false

[[bench]]
name = "ff3_1"
harness = false
